Missing list cell top border

--- a/files/Theme/ThemeMondrian-Darker/addon.less
+++ b/files/Theme/ThemeMondrian-Darker/addon.less
@@ -453,6 +453,7 @@ tr {
 	        td {
 	            border-right: solid 0.065rem lighten(@border-color, 8%) !important;
 	            padding-left: 0.5rem !important;
+	            border-top: solid 0.065rem darken(@border-color, 12%) !important;
 	            border-bottom: solid 0.065rem darken(@border-color, 12%) !important;
 	        }
 	
