--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -464,6 +464,7 @@ tr {
 	        td {
 	            border-right: solid 0.065rem lighten(@border-color, 8%) !important;
 	            padding-left: 0.5rem !important;
+	            border-top: solid 0.065rem @border-color !important;
 	            border-bottom: solid 0.065rem @border-color !important;
 	        }
 	
