--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -946,7 +946,7 @@ button > .badge {
 		background-color: darken(@background-color, 4%) !important;
 	}
 	.input-group-text {
-		z-index: 1;
+		// z-index: 1; // necessary ???
 		border-left: solid 0.125rem @border-color;
 		&:hover {
 			background-color: darken(@background-color, 4%) !important;
