Fixed menu selection borders (removed until finding more precise)

--- a/files/Theme/ThemeMondrian-Light/addon.less
+++ b/files/Theme/ThemeMondrian-Light/addon.less
@@ -118,12 +118,12 @@ a:active {
     	}
     }
     
-    li.active > a {
+    /*li.active > a {
 		border-left: solid 0.25rem @mondrian-light-red-03;
     }
     li.active > ul.sub-menu > li.active > a {
     	border-left: solid 0.25rem @mondrian-light-red-04;
-    }
+    }*/
 }
 ul.sub-menu a.menu-sel::before {
 	background: @mondrian-light-red-05 !important;
