--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -119,12 +119,12 @@ a:active {
     	}
     }
     
-    li.active > a {
+    /*li.active > a {
 		border-left: solid 0.25rem @mondrian-dark-red-05;
     }
     li.active > ul.sub-menu > li.active > a {
     	border-left: solid 0.25rem @mondrian-dark-red-06;
-    }
+    }*/
 }
 ul.sub-menu a.menu-sel::before {
 	background: @mondrian-dark-red-07 !important;
