--- a/files/Theme/ThemeMondrian-Darker/addon.less
+++ b/files/Theme/ThemeMondrian-Darker/addon.less
@@ -122,12 +122,12 @@ a:active {
     	}
     }
     
-    li.active > a {
+    /*li.active > a {
 		border-left: solid 0.25rem @mondrian-darker-red-05;
     }
     li.active > ul.sub-menu > li.active > a {
     	border-left: solid 0.25rem @mondrian-darker-red-06;
-    }
+    }*/
 }
 ul.sub-menu a.menu-sel::before {
 	background: @mondrian-darker-red-07 !important;
