hot-fix on logged-uer dp (dark only ...)

--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -1851,6 +1851,12 @@ ul.root-ul {
 }
 
 // More Overiding styles
+.logged-user {
+	.user-logout, .languages {
+		background: transparent !important;
+	}
+}
+
 tr.highlight td {
 	background: @mondrian-dark-blue-04 !important;
 }
