--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -85,6 +85,11 @@
 @background-light: @layer1-color;
 @active-color:     @mondrian-dark-yellow-06;
 
+body {
+	background: @background-color;
+	color: @text-main-color;
+}
+
 a {
     color: @mondrian-dark-blue-09;
 }
@@ -401,12 +406,6 @@ tr {
 	background: @background-color;
 }
 
-.table > thead > tr.head {
-	td, th {
-		padding-bottom: 0rem !important;
-	}
-}
-
 .pillbox-completion > ul > li {
 	background: @layer1-color !important;
 	color: @text-color !important;
@@ -422,6 +421,9 @@ tr {
     
     thead {
     	border-left: solid 0.25rem @mondrian-dark-yellow-06;
+    	* {
+    		color: @mondrian-dark-yellow-10 !important;
+    	}
     	
         tr.search {
         	th.col-action {
@@ -1387,10 +1389,10 @@ ul.root-ul {
 }
 
 .objform .field > .field-html .field-container {
-	background: @mondrian-dark-black-02 !important;
+	background: @mondrian-dark-black-01 !important; // initially 02 ...
 }
 
-// imported widgets & tools with extern styles ...
+// imported widgets & tools with extern styles
 .calendar {
 	background: @mondrian-dark-black-02 !important;
 }
@@ -1933,4 +1935,20 @@ tr.highlight td {
 
 div.hljs {
 	background-color: white !important;
+}
+
+// TINY MCE OVERRIDE
+.tox-tinymce {
+	border: 1px solid @border-color !important;
+	border-radius: 0px !important;
+	
+	.tox-editor-container .tox-editor-header {
+		background: @layer1-color !important;
+		border-bottom: 1px solid @border-color !important;
+		
+		.tox-menubar, .tox-toolbar-overlord, .tox-toolbar__primary {
+			background-color: @layer1-color !important;
+			background: none !important;
+		}
+	}
 }
