--- a/files/Theme/ThemeMondrian-Dark/const.less
+++ b/files/Theme/ThemeMondrian-Dark/const.less
@@ -34,7 +34,7 @@
 @panel-border-radius: 0rem;
 @panel-box-shadow: none;
 @panel-header-background-color: #2a2a2a;
-@panel-header-color: #F1F1F1;
+@panel-header-color: #ffe3fc;
 @panel-header-border-bottom-color: #5C5C5C;
 @panel-footer-background-color: #2a2a2a;
 @panel-footer-color: #F1F1F1;
@@ -47,7 +47,7 @@
 @subpanel-border-radius: 0rem;
 @subpanel-box-shadow: none;
 @subpanel-header-background-color: #232323;
-@subpanel-header-color: #8B8B8B;
+@subpanel-header-color: #dbdbfe;
 @subpanel-header-border-bottom-color: #5C5C5C;
 @subpanel-footer-background-color: #232323;
 @subpanel-footer-color: #8B8B8B;
@@ -68,7 +68,7 @@
 @tab-content-box-shadow: none;
 
 /* Field */
-@field-label-color: #8B8B8B;
+@field-label-color: #8b8b8b;
 @field-label-font-weight: 500;
 @field-input-background: #232323;
 @field-input-readonly-background: rgba(255, 237, 194, 0.25);
