--- a/files/Theme/ThemeMondrian-Dark/const.less
+++ b/files/Theme/ThemeMondrian-Dark/const.less
@@ -24,7 +24,7 @@
 @btn-transition-border-color: #0F2D1D;
 @btn-transition-border-radius: 0.16rem;
 @btn-icon-background-color: #2a2a2a;
-@btn-icon-color: #5c5c5c;
+@btn-icon-color: #8b8b8b;
 @btn-icon-border-radius: 0.32rem;
 
 /* Panel */
