secondary text lighter (dark only)

--- a/files/Theme/ThemeMondrian-Dark/const.less
+++ b/files/Theme/ThemeMondrian-Dark/const.less
@@ -68,7 +68,7 @@
 @tab-content-box-shadow: none;
 
 /* Field */
-@field-label-color: #8b8b8b;
+@field-label-color: #b9b9b9;
 @field-label-font-weight: 500;
 @field-input-background: #232323;
 @field-input-readonly-background: rgba(255, 237, 194, 0.25);
@@ -104,9 +104,9 @@
 @dlg-color: #F1F1F1;
 @dlg-border-radius: 0rem;
 @dlg-header-background-color: #424242;
-@dlg-header-color: #8B8B8B;
+@dlg-header-color: #b9b9b9;
 @dlg-header-border-bottom-color: #5C5C5C;
 @dlg-footer-background-color: #424242;
-@dlg-footer-color: #8B8B8B;
+@dlg-footer-color: #8b8b8b;
 @dlg-footer-border-top-color: #5C5C5C;
 
