--- a/files/Theme/ThemeMondrian-Darker/addon.less
+++ b/files/Theme/ThemeMondrian-Darker/addon.less
@@ -135,6 +135,8 @@ ul.sub-menu a.menu-sel::before {
 
 .header {
     .btn-header, .btn-shortcut, .btn-group { /* Scope User, embedded shortcuts, shortcuts dropdown */
+    	border-radius: 0px;
+    	
         &:hover {
             background: @layer1-color;
         }
@@ -406,8 +408,13 @@ tr {
     
     thead {
     	border-left: solid 0.25rem @mondrian-darker-yellow-06;
-    	* {
+    	
+    	th, span {
     		color: @mondrian-dark-yellow-10 !important;
+    	}
+    	
+    	button span {
+    		color: @text-main-color;
     	}
     	
         tr.search {
