--- a/files/Theme/ThemeMondrian-Light/const.less
+++ b/files/Theme/ThemeMondrian-Light/const.less
@@ -36,6 +36,7 @@
 @panel-border-radius: 0rem;
 @panel-box-shadow: none;
 @panel-header-background-color: #f9f8f7;
+@panel-header-color: #5e3f5f;
 @panel-header-border-bottom-color: #c6c6c6;
 @panel-footer-background-color: #F3F1EE;
 @panel-footer-color: #474747;
@@ -47,7 +48,7 @@
 @subpanel-border-color: #C6C6C6;
 @subpanel-box-shadow: none;
 @subpanel-header-background-color: #F9F8F7;
-@subpanel-header-color: #474747;
+@subpanel-header-color: #323199;
 @subpanel-header-border-bottom-color: #C6C6C6;
 @subpanel-footer-background-color: #F9F8F7;
 @subpanel-footer-color: #474747;
