--- a/files/Theme/ThemeMondrian-Light/addon.less
+++ b/files/Theme/ThemeMondrian-Light/addon.less
@@ -136,6 +136,7 @@ ul.sub-menu a.menu-sel::before {
         }
     }
     .btn-group {
+    	border-radius: 0px;
     	&:hover {
             background: @layer1-color;
         }
@@ -389,6 +390,14 @@ form {
     
     thead {
     	border-left: solid 0.25rem @mondrian-light-yellow-06;
+    	
+    	th, span {
+    		color: @mondrian-light-yellow-10 !important;
+    	}
+    	
+    	button span {
+    		color: white;
+    	}
     	
         tr.search {
         	th.col-action {
@@ -1481,6 +1490,12 @@ ul.root-ul {
 	background: #F8F7F6 !important;
 	& > .card-footer {
 		background: #F8F7F6 !important;
+	}
+}
+
+.logged-user {
+	.user-logout, .languages {
+		background: transparent !important;
 	}
 }
 
