--- a/files/Theme/ThemeMondrian-Darker/addon.less
+++ b/files/Theme/ThemeMondrian-Darker/addon.less
@@ -410,7 +410,7 @@ tr {
     	border-left: solid 0.25rem @mondrian-darker-yellow-06;
     	
     	th, span {
-    		color: @mondrian-dark-yellow-10 !important;
+    		color: @mondrian-darker-yellow-10 !important;
     	}
     	
     	button span {
@@ -992,11 +992,13 @@ button > .badge {
 
 .modal-content > .modal-header > button.btn-close {
 	color: white !important;
-	background-color: @border-color !important;
+	background-color: @mondrian-dark-black-04 !important;
 	padding: .33rem !important;
+	border-radius: 0rem;
 	
 	&:hover {
-		background-color: lighten(@border-color, 25%) !important;
+		border-radius: 1rem;
+		background-color: @mondrian-dark-black-05 !important;
 	}
 }
 
@@ -1930,6 +1932,25 @@ th.ctcol {
 
 div.hljs {
 	background-color: white !important;
+}
+
+// PREFERENCES STYLES
+.preferences {
+	select#listvis, select#listhid {
+		background-color: @background-color;
+		
+		option {
+			color: @text-main-color;
+			
+			&.area {
+				color: @mondriant-dark-blue-09;
+			}
+			
+			&.userkey {
+				color: @mondriant-dark-purple-09;
+			}
+		}
+	}
 }
 
 // TINY MCE OVERRIDE
