--- a/files/Theme/ThemeMondrian-Darker/addon.less
+++ b/files/Theme/ThemeMondrian-Darker/addon.less
@@ -221,6 +221,36 @@ body.compact {
 	}
 }
 
+/* Module */
+input#field_row_module_id__mdl_name {
+	background: fade(@mondrian-darker-purple-06, 12.5%);
+}
+
+/* Code fields */
+input#field_adp_class,
+input#file_field_adp_script_id,
+input#doc_field_adp_script_id,
+input#field_dis_class,
+input#file_field_dis_script_id,
+input#doc_field_dis_script_id,
+input#field_mtp_class,
+input#file_field_mtp_script_id,
+input#doc_field_mtp_script_id,
+input#field_obe_class,
+input#file_field_obe_script_id,
+input#doc_field_obe_script_id,
+input#field_obj_class,
+input#file_field_obj_script_id,
+input#doc_field_obo_script_id,
+input#field_obo_class,
+input#file_field_obo_script_id,
+input#doc_field_obo_script_id,
+input#field_pcs_class,
+input#file_field_pcs_script_id,
+input#doc_field_pcs_script_id {
+	background: fade(@mondrian-darker-green-06, 12.5%) !important;
+}
+
 .dropdown-menu {
     box-shadow: none;
     border: solid 0.125rem @border-color;
@@ -992,13 +1022,14 @@ button > .badge {
 
 .modal-content > .modal-header > button.btn-close {
 	color: white !important;
-	background-color: @mondrian-dark-black-04 !important;
+	background-color: @mondrian-darker-black-04 !important;
 	padding: .33rem !important;
 	border-radius: 0rem;
+	transition: all 0.25s ease-in-out;
 	
 	&:hover {
 		border-radius: 1rem;
-		background-color: @mondrian-dark-black-05 !important;
+		background-color: @mondrian-darker-black-05 !important;
 	}
 }
 
@@ -1678,6 +1709,20 @@ ul.root-ul {
 			box-shadow: none !important;
 		}
 	}
+	
+	.drag {
+		background: rgba(0,0,0, 0.5) !important;
+		opacity: 0.5 !important;
+		box-shadow: none !important;
+		
+		&::after {
+			background: black !important;
+		}
+	}
+	
+	.dock-zone.drop-target {
+		background: @mondrian-darker-yellow-10 !important;
+	}
 }
 
 .tmpl-desk.on {
@@ -1943,11 +1988,11 @@ div.hljs {
 			color: @text-main-color;
 			
 			&.area {
-				color: @mondriant-dark-blue-09;
+				color: @mondrian-darker-blue-09;
 			}
 			
 			&.userkey {
-				color: @mondriant-dark-purple-09;
+				color: @mondrian-darker-purple-09;
 			}
 		}
 	}
@@ -1968,7 +2013,3 @@ div.hljs {
 		}
 	}
 }
-
-
-
-
