--- a/files/Theme/ThemeMondrian-Light/addon.less
+++ b/files/Theme/ThemeMondrian-Light/addon.less
@@ -369,7 +369,7 @@ form {
 
 .list-shortcuts {
     .item {
-        background: @background-color;
+        background: @mondrian-light-white;
         color: @text-main-color;
         border: solid 0.065rem @layer1-color;
         border-radius: 0 !important;
