chart bg -> transparent

--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -1153,8 +1153,7 @@ div.field-container > input.form-control {
 		}
 	}
 	.tab-content {
-		border-left: transparent !important;
-		background: #232323 !important; // ...
+		background: #232323 !important;
 	}
 }
 .nav-tabs .nav-link.active {
@@ -1826,7 +1825,7 @@ ul.root-ul {
 	}
 }
 
-.btn-secondary.btn-treeview, .btn-group-treeview > button {
+.btn-secondary.btn-treeview, .btn-group-treeview > button, .btn-define {
 	background: transparent !important;
 	
 	&:hover:not(.disabled):not([disabled]) {
