--- a/files/Theme/ThemeMondrian-Light/addon.less
+++ b/files/Theme/ThemeMondrian-Light/addon.less
@@ -1593,8 +1593,12 @@ ul.root-ul {
 			border-radius: 0px !important;
 		}
 	}
-}
+	
+	.chart {
+		background-color: transparent !important;
+	}
 
+}
 
 .modeler_picker {
 	.items > .item > .mdl {
