--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -329,6 +329,10 @@ input#doc_field_pcs_script_id {
     }
 }
 
+.dropdown-item:hover {
+	background: transparent !important;
+}
+
 ul.dropdown-menu.shortcuts {
 	li > a > span > a {
 		i.bi-pin-angle {
