--- a/files/Theme/ThemeMondrian-Darker/addon.less
+++ b/files/Theme/ThemeMondrian-Darker/addon.less
@@ -101,6 +101,19 @@ a:active {
     color: @mondrian-darker-blue-05;
 }
 
+.btn-info {
+	border-radius: 0;
+	background-color: @mondrian-darker-purple-04;
+	color: @text-color;
+	border-color: @mondrian-darker-purple-04;
+	
+	&:hover, &:active {
+		color: @text-color !important;
+		background-color: @mondrian-darker-purple-06 !important;
+		border-color: @mondrian-darker-purple-06 !important;
+	}
+}
+
 .main-menu {
 	li > a {
 		&:hover {
