--- a/files/Theme/ThemeMondrian-Darker/addon.less
+++ b/files/Theme/ThemeMondrian-Darker/addon.less
@@ -2022,6 +2022,21 @@ div.hljs {
 	}
 }
 
+// ZIP EDITOR
+.zip-editor {
+	.folder {
+		.file:hover {
+			background-color: @layer2-color;
+		}
+	}
+	.zip-preview {
+		.content {
+			background-color: @background-color;
+			padding: 0.5rem;
+		}
+	}
+}
+
 // TINY MCE OVERRIDE
 .tox-tinymce {
 	border: 1px solid @border-color !important;
