--- a/files/Theme/ThemeMondrian-Light/addon.less
+++ b/files/Theme/ThemeMondrian-Light/addon.less
@@ -142,7 +142,12 @@ ul.sub-menu a.menu-sel::before {
 }
 
 .header {
+    .main-nav-toggle:hover {
+        border-radius: 0px !important;
+        color: @text-color !important;
+    }
     .btn-shortcut { /* embedded shortcuts, shortcuts dropdown */
+        margin: 0px 6px !important;
         &:hover {
             color: darken(@layer1-color, 32%);
         }
@@ -225,10 +230,16 @@ ul.sub-menu a.menu-sel::before {
     	padding: 8px;
     }
 }
+
 body.compact {
     .search-bar > .input-group > input.form-control {
         padding: 7px 7px !important;
     }
+}
+
+.main-nav > .search-bar > .input-group > .btn-icon.clear.visible {
+    margin: 0 !important;
+    padding: 7.75px; // !!!
 }
 
 /* Module */
@@ -1170,6 +1181,15 @@ div.code-editor {
             border: solid 0.065rem @border-color; //proper color ?
             
             ul.explorer {
+                .search-bar {
+                    margin: 0.25rem !important;
+                    margin-right: 0.3rem !important;
+                    
+                    & > .input-group > .btn-icon.clear.visible {
+                        margin: 0 !important;
+                    }
+                }
+                
                 li.module {
                     // COLOR (text)
                     color: @text-color !important; //? !important
